test/soft-contract/ill-typed/braun_tree.caprice
(* TEST
  include refutable;
*)


(* error is that item is always inserted on the left; so it doesn't stay balanced *)

let t a = mu t.
  | `Leaf of unit
  | `Node of { v : a ; l : t ; r : t }

let rec size n = 
  match n with
  | `Leaf () -> 0
  | `Node node -> 1 + size node.l + size node.r
  end

let rec is_braun_tree x = 
  match x with
  | `Leaf () -> true
  | `Node node ->
    is_braun_tree node.l
    && is_braun_tree node.r
    && (size node.l == size node.r || size node.l == size node.r + 1)
  end

let bt a = { tree : t a | is_braun_tree tree }

let rec insert (type a_) (tree : bt a_) (x : a_) : bt a_ =
  match tree with
  | `Leaf () -> `Node { v = x ; l = `Leaf () ; r = `Leaf () }
  | `Node node ->
    `Node { l = insert a_ node.l x ; r = node.r ; v = node.v } (* ERROR: only inserts to left; so won't be balanced *)
  end
